--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     /* ↑ Increase all text by 25% */
     html { font-size: 125%; }
     :root { --burgundy: #e0003c; }
+    /* ↑ Increase nav link font-size by 25% */
+    header nav a {
+      font-size: 1.25em;
+    }
   </style>
 </head>
 <body class="font-sans text-white bg-black">
