--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,10 @@
   <style>
     html { font-size:125%; } /* global +25% */
     :root { --burgundy: #e0003c; }
-
+    /* ↑ Increase nav link font-size by 25% */
+    header nav a {
+      font-size: 1.25em;
+    }
     /* Portrait → Horizontal background */
     #portfolio-bg {
       background-image: url('portfolio_background.webp');
