--- a/portfolio.html
+++ b/portfolio.html
@@ -26,16 +26,19 @@
       #portfolio-bg { background-image: url('portfolio_backround_horizontal.webp'); }
     }
   </style>
+  <link
+    href="https://assets.calendly.com/assets/external/widget.css"
+    rel="stylesheet"
+  />
 </head>
 <body class="font-sans text-white">
 
   <!-- NAVIGATION (same as home) -->
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
-    <a href="index.html" class="flex items-center gap-2">
-      <img src="logo.webp" class="w-10 h-10 select-none" alt="Logo" />
-      <span class="text-xl font-semibold select-none">
-        <span class="text-white">Crimson</span>
-        <span class="text-[var(--burgundy)]">Lens</span>
+    <a href="index.html" class="flex items-center gap-2 group" aria-label="Homepage">
+      <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
+        <span class="text-xl font-semibold tracking-wide select-none">
+        <span class="text-white">Crimson</span><span class="text-[var(--burgundy)]">Lens</span>
       </span>
     </a>
     <nav class="hidden items-center gap-6 text-sm md:flex">
@@ -157,15 +160,17 @@
     </div>
   </div>
 
-  <!-- SCRIPTS -->
+  <!-- Calendly JS (no async) -->
   <script src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <!-- Attach handlers once DOM & Calendly are ready -->
   <script>
-    // Calendly on .book-call
-    document.querySelectorAll('.book-call').forEach(btn => {
-      btn.addEventListener('click', e => {
-        e.preventDefault();
-        Calendly.initPopupWidget({
-          url: 'https://calendly.com/jakabbenedek2002/discovery-call'
+    window.addEventListener('DOMContentLoaded', function () {
+      document.querySelectorAll('.book-call').forEach((btn) => {
+        btn.addEventListener('click', function (e) {
+          e.preventDefault();
+          Calendly.initPopupWidget({
+            url: 'https://calendly.com/jakabbenedek2002/discovery-call'
+          });
         });
       });
     });
