--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- NAVIGATION -->
 <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
+  <!-- Logo -->
   <a href="index.html" class="flex items-center gap-2" aria-label="Homepage">
     <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
     <span class="text-xl font-semibold tracking-wide select-none">
@@ -31,13 +32,14 @@
     </span>
   </a>
 
+  <!-- Nav (hidden on small, flex on md+) -->
   <nav class="hidden gap-6 text-sm md:flex">
     <a href="#services"      class="transition-colors hover:text-[var(--burgundy)]">Services</a>
     <a href="#testimonials"  class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
-    <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
+    <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
     <a href="#contact"
        class="book-call ml-8 px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
-      Book&nbsp;a&nbsp;Call
+      Book a Call
     </a>
   </nav>
 </header>
