--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </span>
   </a>
 
-  <!-- Nav (hidden on small, flex on md+) -->
-  <nav class="hidden gap-6 text-sm md:flex">
+  <!-- Nav (hidden on small, flex+centered on md+) -->
+  <nav class="hidden md:flex items-center gap-6 text-sm">
     <a href="#services"      class="transition-colors hover:text-[var(--burgundy)]">Services</a>
     <a href="#testimonials"  class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
     <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
