--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,11 @@
     header nav a {
       font-size: 1.25em;
     }
-    /* Portrait → Horizontal background */
+    /* Single horizontal background, just like on home */
     #portfolio-bg {
-      background-image: url('portfolio_background.webp');
+      background-image: url('portfolio_backround_horizontal.webp');
       background-size: cover;
       background-position: center;
-    }
-    @media (min-width: 640px) {
-      #portfolio-bg { background-image: url('portfolio_background_1080x1920.webp'); }
-    }
-    @media (min-width: 1024px) {
-      #portfolio-bg { background-image: url('portfolio_backround_horizontal.webp'); }
     }
   </style>
   <link
