--- a/index.html
+++ b/index.html
@@ -125,7 +125,163 @@
     </div>
   </section>
 
-  <!-- ... rest of page unchanged ... -->
+  <!-- SERVICES -->
+  <section id="services" class="py-24 bg-black">
+    <div class="max-w-6xl px-6 mx-auto">
+      <h2 class="mb-16 text-3xl font-semibold text-center md:text-4xl">Services</h2>
+      <div class="grid gap-12 md:grid-cols-3">
+        <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
+          <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
+               style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
+          <h3 class="mb-4 text-2xl font-medium">Insight‑Driven Content Strategy</h3>
+          <p class="text-gray-300">Deep audience research, keyword mapping and structured content calendars.</p>
+        </div>
+        <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
+          <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
+               style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
+          <h3 class="mb-4 text-2xl font-medium">Photo &amp; Video Production</h3>
+          <p class="text-gray-300">High‑impact visuals from concept to final edit—studio, aerial and documentary styles.</p>
+        </div>
+        <div class="relative p-8 overflow-hidden transition transform bg-neutral-900 rounded-3xl shadow-lg group hover:-translate-y-2">
+          <div class="absolute inset-0 opacity-15 group-hover:scale-110 transition-transform"
+               style="background:linear-gradient(135deg,var(--burgundy),transparent 60%)"></div>
+          <h3 class="mb-4 text-2xl font-medium">Next‑Gen Visual Effects</h3>
+          <p class="text-gray-300">Custom graphics and animations that elevate campaigns and drive engagement.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- TESTIMONIALS (5 slides) -->
+  <section id="testimonials" class="py-24 bg-neutral-900">
+    <div class="max-w-6xl px-6 mx-auto">
+      <h2 class="mb-12 text-3xl font-semibold text-center md:text-4xl">What Clients Say</h2>
+      <div class="relative overflow-hidden">
+        <div id="carousel" class="flex transition-transform duration-700" style="will-change: transform;">
+          <!-- Slide 1 -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “CrimsonLens’ insight‑driven strategy grew our inbound leads by 38 % in three months.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Adam K., CEO, EN‑CO Software</footer>
+            </blockquote>
+          </div>
+          <!-- Slide 2 -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “Their aerial videos went viral and doubled our foot traffic.”
+              </p>
+              <footer class="mt-4 text-gray-400">— István P., Director, Aeropark Budapest</footer>
+            </blockquote>
+          </div>
+          <!-- Slide 3 -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “The visuals made our ad campaign look like a million‑euro production.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Nóra V., Marketing Lead, Sziget Festival</footer>
+            </blockquote>
+          </div>
+          <!-- Slide 4 -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “Their motion graphics took our product launch from ordinary to unforgettable.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Luca R., Product Manager, TechNova</footer>
+            </blockquote>
+          </div>
+          <!-- Slide 5 -->
+          <div class="flex-shrink-0 w-full px-8">
+            <blockquote class="text-center">
+              <p class="text-xl italic leading-relaxed md:text-2xl">
+                “Professional, creative, and lightning‑fast — the ideal content partner.”
+              </p>
+              <footer class="mt-4 text-gray-400">— Marianna S., CMO, VentureWorks</footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- five dots -->
+      <div class="flex justify-center gap-2 mt-8">
+        <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
+        <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 2"></button>
+        <button data-slide="2" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 3"></button>
+        <button data-slide="3" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 4"></button>
+        <button data-slide="4" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 5"></button>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT CTA -->
+  <section id="contact"
+           class="relative py-24 text-center bg-cover bg-center"
+           style="background-image:url('contact_background.webp');">
+    <div class="absolute inset-0 bg-black opacity-40" aria-hidden="true"></div>
+    <div class="relative z-10">
+      <h2 class="mb-6 text-3xl font-semibold md:text-4xl">Ready to Elevate Your Brand?</h2>
+      <p class="max-w-2xl mx-auto mb-10 text-gray-300">
+        Let’s craft visual stories and data‑powered campaigns that move your audience—and your bottom line.
+      </p>
+      <a href="#"
+         class="book-call px-8 py-4 transition rounded-full shadow-lg bg-[var(--burgundy)] hover:bg-white hover:text-black">
+        Book a Call
+      </a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="py-6 text-sm text-center bg-neutral-900 text-gray-500">
+    <div class="flex justify-center gap-4 mb-2">
+      <a href="https://linkedin.com/in/jakabbenedek2002" target="_blank" class="hover:text-white">LinkedIn</a>
+      <a href="https://instagram.com/your_instagram" target="_blank" class="hover:text-white">Instagram</a>
+    </div>
+    © 2025 CrimsonLens. All rights reserved.
+  </footer>
+
+  <!-- CAROUSEL SCRIPT -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const carousel = document.getElementById('carousel');
+      const dots = document.querySelectorAll('.dot');
+      let currentSlide = 0;
+      const totalSlides = carousel.children.length;
+
+      function updateDots(idx) {
+        dots.forEach((dot, i) => {
+          dot.classList.toggle('bg-[var(--burgundy)]', i === idx);
+          dot.classList.toggle('bg-gray-500', i !== idx);
+        });
+      }
+
+      function goToSlide(idx) {
+        currentSlide = (idx + totalSlides) % totalSlides;
+        carousel.style.transform = translateX(-${currentSlide * 100}%);
+        updateDots(currentSlide);
+      }
+
+      dots.forEach((dot, i) => dot.addEventListener('click', () => goToSlide(i)));
+      setInterval(() => goToSlide(currentSlide + 1), 6000);
+    });
+  </script>
+
+ <!-- Calendly JS (no async) -->
+  <script src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <!-- Attach handlers once DOM & Calendly are ready -->
+  <script>
+    window.addEventListener('DOMContentLoaded', function () {
+      document.querySelectorAll('.book-call').forEach((btn) => {
+        btn.addEventListener('click', function (e) {
+          e.preventDefault();
+          Calendly.initPopupWidget({
+            url: 'https://calendly.com/jakabbenedek2002/discovery-call'
+          });
+        });
+      });
+    });
+  </script>
 </body>
 </html>
