--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
     }
 
     /* ── Custom break at 916px ─────────────────────────────────────────────── */
-    /* below 916px: hide the desktop nav, show hamburger */
     @media (max-width: 916px) {
       header nav { display: none !important; }
       #nav-toggle { display: block !important; }
     }
-    /* at or above 916px: show desktop nav, hide hamburger & mobile dropdown */
     @media (min-width: 916px) {
       header nav { display: flex !important; }
       #nav-toggle,
       #mobile-nav { display: none !important; }
     }
   </style>
-  <!-- Calendly styles (required for popup) -->
+  <!-- Calendly styles -->
   <link
     href="https://assets.calendly.com/assets/external/widget.css"
     rel="stylesheet"
@@ -36,9 +34,8 @@
 </head>
 <body class="font-sans text-white bg-black">
 
-  <!-- ── HEADER ─────────────────────────────────────────────────────────────── -->
+  <!-- HEADER -->
   <header class="fixed inset-x-0 top-0 z-50 flex items-center justify-between px-6 py-4 bg-black/80 backdrop-blur-lg">
-    <!-- Logo -->
     <a href="#" class="flex items-center gap-2" aria-label="Homepage">
       <img src="logo.webp" alt="CrimsonLens logo" class="w-10 h-10 select-none" />
       <span class="text-xl font-semibold tracking-wide select-none">
@@ -46,19 +43,17 @@
       </span>
     </a>
 
-    <!-- Desktop nav (hidden by default, shown via custom media) -->
     <nav class="hidden md:flex items-center gap-6 text-sm">
-      <a href="#services"      class="transition-colors hover:text-[var(--burgundy)]">Services</a>
-      <a href="#testimonials"  class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
+      <a href="#services"     class="transition-colors hover:text-[var(--burgundy)]">Services</a>
+      <a href="#testimonials" class="transition-colors hover:text-[var(--burgundy)]">Testimonials</a>
       <a href="portfolio.html" class="transition-colors hover:text-[var(--burgundy)]">View Portfolio</a>
       <a href="#contact"
          class="book-call ml-8 px-6 py-3 rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black transition">
-        Book&nbsp;a&nbsp;Call
+        Book a Call
       </a>
     </nav>
 
-    <!-- Hamburger (shown under 916px) -->
-    <button id="nav-toggle" class="hidden p-2 text-white focus:outline-none" aria-label="Toggle menu">
+    <button id="nav-toggle" class="hidden p-2 text-white focus:outline-none md:hidden" aria-label="Toggle menu">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 6h16M4 12h16M4 18h16"/>
@@ -66,44 +61,36 @@
     </button>
   </header>
 
-  <!-- ── MOBILE DROPDOWN (hidden by default) ─────────────────────────────────── -->
+  <!-- MOBILE DROPDOWN -->
   <nav id="mobile-nav"
        class="hidden absolute top-16 inset-x-0 bg-black flex flex-col items-center space-y-4 py-8 text-lg z-40">
-    <a href="#services"      class="text-white hover:text-[var(--burgundy)]">Services</a>
-    <a href="#testimonials"  class="text-white hover:text-[var(--burgundy)]">Testimonials</a>
+    <a href="#services"     class="text-white hover:text-[var(--burgundy)]">Services</a>
+    <a href="#testimonials" class="text-white hover:text-[var(--burgundy)]">Testimonials</a>
     <a href="portfolio.html" class="text-white hover:text-[var(--burgundy)]">View Portfolio</a>
     <a href="#contact"
        class="book-call px-6 py-2 rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black transition">
-      Book a Call
+      Book a Call
     </a>
   </nav>
 
-  <!-- ── TOGGLE SCRIPT (just before </body>) ────────────────────────────────── -->
+  <!-- NAV TOGGLE SCRIPT -->
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       const toggle = document.getElementById('nav-toggle');
       const mobileNav = document.getElementById('mobile-nav');
-
-      // Open/close on hamburger click
       toggle.addEventListener('click', e => {
         e.stopPropagation();
         mobileNav.classList.toggle('hidden');
       });
-
-      // Prevent clicks inside the menu from closing it
       mobileNav.addEventListener('click', e => e.stopPropagation());
-
-      // Clicking the rest of the page closes the menu
-      document.addEventListener('click', () => {
-        mobileNav.classList.add('hidden');
-      });
+      document.addEventListener('click', () => mobileNav.classList.add('hidden'));
     });
   </script>
-  
+
   <!-- HERO -->
   <section class="relative flex items-center justify-center min-h-screen pt-24 text-center bg-center bg-cover"
            style="background-image:url('hero_background.webp');">
-    <div class="absolute inset-0 bg-black/10" aria-hidden="true"></div>
+    <div class="absolute inset-0 bg-black/10"></div>
     <div class="relative z-10 max-w-3xl px-6">
       <h1 class="mb-3 text-4xl font-bold leading-tight md:text-6xl">
         Visual Storytelling Meets<br>
@@ -115,11 +102,11 @@
       <div class="flex flex-wrap justify-center gap-4">
         <a href="portfolio.html"
            class="px-6 py-3 border border-white rounded-full transition hover:bg-white hover:text-black">
-          View Portfolio
+          View Portfolio
         </a>
         <a href="#contact"
-           class="book-call px-6 py-3 transition rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black">
-          Book a Call
+           class="book-call px-6 py-3 rounded-full bg-[var(--burgundy)] hover:bg-white hover:text-black transition">
+          Book a Call
         </a>
       </div>
     </div>
@@ -151,8 +138,8 @@
       </div>
     </div>
   </section>
-
-  <!-- TESTIMONIALS (5 slides) -->
+  
+  <!-- TESTIMONIALS -->
   <section id="testimonials" class="py-24 bg-neutral-900">
     <div class="max-w-6xl px-6 mx-auto">
       <h2 class="mb-12 text-3xl font-semibold text-center md:text-4xl">What Clients Say</h2>
@@ -205,7 +192,6 @@
           </div>
         </div>
       </div>
-      <!-- five dots -->
       <div class="flex justify-center gap-2 mt-8">
         <button data-slide="0" class="dot w-3 h-3 rounded-full bg-[var(--burgundy)]" aria-label="Slide 1"></button>
         <button data-slide="1" class="dot w-3 h-3 rounded-full bg-gray-500" aria-label="Slide 2"></button>
@@ -242,24 +228,24 @@
     © 2025 CrimsonLens. All rights reserved.
   </footer>
 
-  <!-- CAROUSEL SCRIPT -->
+   <!-- CAROUSEL SCRIPT -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const carousel = document.getElementById('carousel');
-      const dots = document.querySelectorAll('.dot');
+      const dots     = document.querySelectorAll('.dot');
       let currentSlide = 0;
       const totalSlides = carousel.children.length;
 
       function updateDots(idx) {
         dots.forEach((dot, i) => {
           dot.classList.toggle('bg-[var(--burgundy)]', i === idx);
-          dot.classList.toggle('bg-gray-500', i !== idx);
+          dot.classList.toggle('bg-gray-500',   i !== idx);
         });
       }
 
       function goToSlide(idx) {
         currentSlide = (idx + totalSlides) % totalSlides;
-        carousel.style.transform = translateX(-${currentSlide * 100}%);
+        carousel.style.transform = `translateX(-${currentSlide * 100}%)`;
         updateDots(currentSlide);
       }
 
@@ -268,13 +254,12 @@
     });
   </script>
 
- <!-- Calendly JS (no async) -->
+  <!-- Calendly JS & INIT -->
   <script src="https://assets.calendly.com/assets/external/widget.js"></script>
-  <!-- Attach handlers once DOM & Calendly are ready -->
   <script>
     window.addEventListener('DOMContentLoaded', function () {
-      document.querySelectorAll('.book-call').forEach((btn) => {
-        btn.addEventListener('click', function (e) {
+      document.querySelectorAll('.book-call').forEach(btn => {
+        btn.addEventListener('click', function(e) {
           e.preventDefault();
           Calendly.initPopupWidget({
             url: 'https://calendly.com/jakabbenedek2002/discovery-call'
